custom-elements: Fix a bug that HTML parser didn't set custom element state correctly for unknown "is" attribute value.

In HTML parser, if custom element definition is not found and the
element local name is invalid for custom element name, custom element
state of the element was set to "Uncustomized", which won't be upgraded.

It should be "Undefined" if "is" attribute exists.

Also, CustomElementRegistry::AddCandidate() didn't pick up a correct
name for customized built-in candidates.

A Blink layout test for :defined is upstreamed to WPT.

Bug: 736967
Change-Id: I583073eabc4ac276c6990161516c7b289905909b
Reviewed-on: https://chromium-review.googlesource.com/903423
Reviewed-by: Yoshifumi Inoue <yosin@chromium.org>
Commit-Queue: Kent Tamura <tkent@chromium.org>
Cr-Commit-Position: refs/heads/master@{#534621}
Former-commit-id: 932a24c73fb4cfd4f80ba94ea729ebfcddcb0dc9